# langchain-001

./: .gitignore  README.md  pyproject.toml
long/: manae.py  template.py
r18/: chichi.py  chichihoushi.py  chu.py  paipai.py  paizuri.py  paizuri02.py  r18s copy 2.py  r18s copy 3.py  r18s copy 4.py  r18s copy.py
src/: chatbot_engine.py  function_calling.py  function_calling_extraction.py  function_calling_tagging.py  function_calling_tool.py  gradio_app.py  lcel_sample.py  lcel_sample_02.py  openai_multi_function_agent.py  slack_app.py
src_r18/: chatbot_engine copy.py  chatbot_engine_cls.py  chatbot_engine_r18.py
