[tool.poetry]
name = "langchain-001"
version = "0.1.0"
description = ""
authors = ["Jun Terayama <pam130901@gmail.com>"]

[tool.poetry.dependencies]
python = "3.11.3"
gradio = "^4.19.1"
python-dotenv = "^1.0.1"
openai = "^1.12.0"
langchain = "0.1.6"
langchain-openai = "^0.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
